Issue #17408: Avoid using an obsolete instance of the copyreg module when the interpreter is shutdown and then started again.